--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "axios": "^0.24.0",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "framer-motion": "4.1.17",
     "postcss": "^7",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
+    "react-intersection-observer": "^8.33.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
